<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Voting Made Easier</string>
    <string name="app_name">PeerVote</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="hello1">PeerVote Log in</string>
    <string name="logout">Log out</string>
    <string name="add">Add Vote</string>
    <string name="quit">Quit</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="owner">Author</string>
    <string name="submit">Submit</string>
    <string name="add_row">Add Row</string>
    <string name="delete_row">Delete Row</string>
    <string name="custom_text">Enter custom text here</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="expire_prompt">Choose Hours</string>
    <string-array name="expire_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>forever</item>
    </string-array>
</resources>